final run find communities

--- a/notebooks/find_communities.ipynb
+++ b/notebooks/find_communities.ipynb
@@ -12,12 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "88bbe7ca3ab46aea",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:06:40.851933Z",
-     "start_time": "2025-11-01T20:06:40.534352Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -39,12 +34,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "74d78bc3accae52d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:06:40.863222Z",
-     "start_time": "2025-11-01T20:06:40.860858Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_graph_from_neo4j(driver):\n",
@@ -54,11 +44,7 @@
     "            MATCH (n)\n",
     "            RETURN id(n) AS id, labels(n) AS labels, properties(n) AS properties\n",
     "        \"\"\")\n",
-    "        for record in nodes_result:\n",
-    "            props = dict(record[\"properties\"])            \n",
-    "            if \"id_group_anonymous\" in props:\n",
-    "                props[\"id_group_anonymous\"] = props[\"id_group_anonymous\"]\n",
-    "            \n",
+    "        for record in nodes_result:    \n",
     "            G.add_node(record[\"id\"], labels=record[\"labels\"], **record[\"properties\"])\n",
     "\n",
     "        rels_result = session.run(\"\"\"\n",
@@ -85,10 +71,6 @@
     "        else:\n",
     "            labels_str = str(labels)\n",
     "\n",
-    "        id_group = data.get('id_group_anonymous')\n",
-    "        if id_group is not None:\n",
-    "            labels_str = f\"{labels_str},{id_group}\"\n",
-    "\n",
     "        data['labels'] = labels_str\n",
     "\n",
     "    for u, v, data in graph.edges(data=True):\n",
@@ -102,12 +84,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "14d63333dd90a2c3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:06:40.912133Z",
-     "start_time": "2025-11-01T20:06:40.909515Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_partition(G, communities, method_name):\n",
@@ -167,7 +144,14 @@
     "        else:\n",
     "            print(f\"Node {node} from partition not in graph.\")\n",
     "\n",
-    "    nx.set_node_attributes(G, final_attributes, attribute_name)"
+    "    nx.set_node_attributes(G, final_attributes, attribute_name)\n",
+    "\n",
+    "def stamp_id_group_to_graph(G):\n",
+    "    nx.set_node_attributes(G, \"None\", \"id_group_anonymous\")\n",
+    "\n",
+    "    for node, data in G.nodes(data=True):\n",
+    "        if \"id_group_anonymous\" in data:\n",
+    "            G.nodes[node][\"id_group_anonymous\"] = str(data[\"id_group_anonymous\"])"
    ]
   },
   {
@@ -294,6 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# noinspection PyUnresolvedReferences\n",
     "def analyze_graph_communities_parallel(G, graph_name, k_target):\n",
     "    \n",
     "    print(f\"\\n{'='*25} PROCESSING GRAPH: {graph_name} {'='*25}\")\n",
@@ -357,6 +342,7 @@
     "    \n",
     "    try:\n",
     "        print(f\"\\nExporting {graph_name} to GEXF...\")\n",
+    "        stamp_id_group_to_graph(G)\n",
     "        G_exportable = prepare_graph_for_gexf(G.copy())\n",
     "        \n",
     "        nx.write_gexf(G_exportable, export_filename)\n",
@@ -367,12 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9968dbae3fa771a9",
    "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-11-01T20:06:41.005932Z"
-    },
     "jupyter": {
      "is_executing": true
     }
@@ -401,16 +384,15 @@
       "Graph imported into NetworkX\n",
       "\n",
       "========================= PROCESSING GRAPH: Shares =========================\n",
-      "Graph has 3506 nodes and 72869 edges.\n",
+      "Graph has 3506 nodes and 72911 edges.\n",
       "Submitting all community tasks for Shares to ThreadPool...\n",
       "  [Thread] Starting Girvan-Newman...\n",
       "  [Thread] Starting Greedy Modularity...\n",
-      "  [Thread] Starting Naive Greedy Modularity...\n",
       "  [Thread] Starting Lukes Partitioning...\n",
       "  [Thread] Starting Fast Label (asyn_lpa)...\n",
       "  [Thread] Starting Louvain...\n",
       "  [Thread] Starting Label Propagation...\n",
-      "  [Thread] Starting Fluidc (k=3)...\n",
+      "  [Thread] Starting Fluidc (k=4)...\n",
       "All tasks submitted. Waiting for results...\n",
       "\n",
       "--- ERROR running Lukes Partitioning ---\n",
@@ -420,36 +402,36 @@
       "--- ERROR running Asynchronous Fluidc ---\n",
       "  > Fluid Communities require connected Graphs.\n",
       "------------------------------\n",
-      "  [Thread] Finished Fast Label (asyn_lpa).\n",
       "  [Thread] Finished Label Propagation.\n",
-      "\n",
-      "Processing result for Fast Label Propagation...\n",
-      "Evaluating fast_label_propagation ---\n",
-      "Modularity: 0.1921\n",
-      "Partition Quality (Coverage, Performance): (0.9448, 0.4504)\n",
-      "Found 210 communities.\n",
-      "------------------------------\n",
       "\n",
       "Processing result for Label Propagation...\n",
       "Evaluating label_propagation ---\n",
-      "Modularity: 0.0379\n",
-      "Partition Quality (Coverage, Performance): (0.9931, 0.3652)\n",
-      "Found 199 communities.\n",
+      "Modularity: 0.0428\n",
+      "Partition Quality (Coverage, Performance): (0.9920, 0.3701)\n",
+      "Found 195 communities.\n",
+      "------------------------------\n",
+      "  [Thread] Finished Fast Label (asyn_lpa).\n",
+      "\n",
+      "Processing result for Fast Label Propagation...\n",
+      "Evaluating fast_label_propagation ---\n",
+      "Modularity: 0.1924\n",
+      "Partition Quality (Coverage, Performance): (0.9446, 0.4529)\n",
+      "Found 208 communities.\n",
       "------------------------------\n",
       "  [Thread] Finished Louvain.\n",
       "\n",
       "Processing result for Louvain...\n",
       "Evaluating louvain ---\n",
-      "Modularity: 0.4572\n",
-      "Partition Quality (Coverage, Performance): (0.5648, 0.9389)\n",
-      "Found 144 communities.\n",
+      "Modularity: 0.4613\n",
+      "Partition Quality (Coverage, Performance): (0.5682, 0.9295)\n",
+      "Found 142 communities.\n",
       "------------------------------\n",
       "  [Thread] Finished Greedy Modularity.\n",
       "\n",
       "Processing result for Greedy Modularity...\n",
       "Evaluating greedy_modularity ---\n",
-      "Modularity: 0.3772\n",
-      "Partition Quality (Coverage, Performance): (0.6354, 0.8250)\n",
+      "Modularity: 0.3879\n",
+      "Partition Quality (Coverage, Performance): (0.6737, 0.8151)\n",
       "Found 158 communities.\n",
       "------------------------------\n",
       "  [Thread] Finished Girvan-Newman.\n",
@@ -459,7 +441,147 @@
       "Modularity: 0.0148\n",
       "Partition Quality (Coverage, Performance): (1.0000, 0.2066)\n",
       "Found 128 communities.\n",
-      "------------------------------\n"
+      "------------------------------\n",
+      "\n",
+      "Exporting Shares to GEXF...\n",
+      "\n",
+      ">>> Successfully exported graph to ../visualization/Shares_with_communities.gexf\n",
+      "\n",
+      "========================= PROCESSING GRAPH: Viral =========================\n",
+      "Graph has 14 nodes and 78 edges.\n",
+      "Submitting all community tasks for Viral to ThreadPool...\n",
+      "  [Thread] Starting Girvan-Newman...\n",
+      "  [Thread] Finished Girvan-Newman.\n",
+      "  [Thread] Starting Greedy Modularity...\n",
+      "  [Thread] Finished Greedy Modularity.\n",
+      "  [Thread] Starting Lukes Partitioning...\n",
+      "  [Thread] Starting Louvain...\n",
+      "  [Thread] Finished Louvain.\n",
+      "  [Thread] Starting Fast Label (asyn_lpa)...\n",
+      "  [Thread] Finished Fast Label (asyn_lpa).\n",
+      "  [Thread] Starting Label Propagation...\n",
+      "  [Thread] Finished Label Propagation.\n",
+      "All tasks submitted. Waiting for results...\n",
+      "\n",
+      "Processing result for Label Propagation...\n",
+      "Evaluating label_propagation ---\n",
+      "Modularity: 0.0000\n",
+      "Partition Quality (Coverage, Performance): (1.0000, 0.8571)\n",
+      "Found 1 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Processing result for Fast Label Propagation...\n",
+      "Evaluating fast_label_propagation ---\n",
+      "Modularity: 0.0000\n",
+      "Partition Quality (Coverage, Performance): (1.0000, 0.8571)\n",
+      "Found 1 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Processing result for Louvain...\n",
+      "Evaluating louvain ---\n",
+      "Modularity: 0.0125\n",
+      "Partition Quality (Coverage, Performance): (0.7179, 0.7363)\n",
+      "Found 2 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Processing result for Girvan-Newman...\n",
+      "Evaluating girvan_newman ---\n",
+      "Modularity: -0.0003\n",
+      "Partition Quality (Coverage, Performance): (0.9744, 0.9560)\n",
+      "Found 2 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Processing result for Greedy Modularity...\n",
+      "Evaluating greedy_modularity ---\n",
+      "Modularity: 0.0125\n",
+      "Partition Quality (Coverage, Performance): (0.7179, 0.7363)\n",
+      "Found 2 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "--- ERROR running Lukes Partitioning ---\n",
+      "  > lukes_partitioning works only on trees\n",
+      "------------------------------\n",
+      "  [Thread] Starting Fluidc (k=4)...\n",
+      "  [Thread] Finished Fluidc (k=4).\n",
+      "\n",
+      "Processing result for Asynchronous Fluidc...\n",
+      "Evaluating fluidc ---\n",
+      "Modularity: -0.0390\n",
+      "Partition Quality (Coverage, Performance): (0.2564, 0.3626)\n",
+      "Found 4 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Exporting Viral to GEXF...\n",
+      "\n",
+      ">>> Successfully exported graph to ../visualization/Viral_with_communities.gexf\n",
+      "\n",
+      "========================= PROCESSING GRAPH: Misinfo =========================\n",
+      "Graph has 937 nodes and 7802 edges.\n",
+      "Submitting all community tasks for Misinfo to ThreadPool...\n",
+      "  [Thread] Starting Girvan-Newman...\n",
+      "  [Thread] Starting Greedy Modularity...\n",
+      "  [Thread] Starting Lukes Partitioning...\n",
+      "  [Thread] Starting Fast Label (asyn_lpa)...\n",
+      "  [Thread] Finished Fast Label (asyn_lpa).\n",
+      "  [Thread] Starting Label Propagation...\n",
+      "  [Thread] Starting Louvain...\n",
+      "  [Thread] Finished Label Propagation.\n",
+      "  [Thread] Starting Fluidc (k=4)...\n",
+      "All tasks submitted. Waiting for results...\n",
+      "\n",
+      "Processing result for Fast Label Propagation...\n",
+      "Evaluating fast_label_propagation ---\n",
+      "Modularity: 0.6177\n",
+      "Partition Quality (Coverage, Performance): (0.7153, 0.9725)\n",
+      "Found 110 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "--- ERROR running Lukes Partitioning ---\n",
+      "  > lukes_partitioning works only on trees\n",
+      "------------------------------\n",
+      "\n",
+      "--- ERROR running Asynchronous Fluidc ---\n",
+      "  > Fluid Communities require connected Graphs.\n",
+      "------------------------------\n",
+      "\n",
+      "Processing result for Label Propagation...\n",
+      "Evaluating label_propagation ---\n",
+      "Modularity: 0.5546\n",
+      "Partition Quality (Coverage, Performance): (0.7789, 0.9112)\n",
+      "Found 93 communities.\n",
+      "------------------------------\n",
+      "  [Thread] Finished Louvain.\n",
+      "\n",
+      "Processing result for Louvain...\n",
+      "Evaluating louvain ---\n",
+      "Modularity: 0.6576\n",
+      "Partition Quality (Coverage, Performance): (0.7649, 0.9341)\n",
+      "Found 45 communities.\n",
+      "------------------------------\n",
+      "  [Thread] Finished Greedy Modularity.\n",
+      "\n",
+      "Processing result for Greedy Modularity...\n",
+      "Evaluating greedy_modularity ---\n",
+      "Modularity: 0.5612\n",
+      "Partition Quality (Coverage, Performance): (0.7143, 0.8755)\n",
+      "Found 46 communities.\n",
+      "------------------------------\n",
+      "  [Thread] Finished Girvan-Newman.\n",
+      "\n",
+      "Processing result for Girvan-Newman...\n",
+      "Evaluating girvan_newman ---\n",
+      "Modularity: 0.0168\n",
+      "Partition Quality (Coverage, Performance): (0.9997, 0.1870)\n",
+      "Found 34 communities.\n",
+      "------------------------------\n",
+      "\n",
+      "Exporting Misinfo to GEXF...\n",
+      "\n",
+      ">>> Successfully exported graph to ../visualization/Misinfo_with_communities.gexf\n",
+      "\n",
+      "\n",
+      "Analysis complete.\n",
+      "Connection closed.\n"
      ]
     }
    ],
@@ -506,7 +628,7 @@
     "        (\"Misinfo\", G_misinfo)\n",
     "    ]\n",
     "\n",
-    "    K_COMMUNITIES = 3\n",
+    "    K_COMMUNITIES = 4\n",
     "\n",
     "    for graph_name, G in graphs_to_process:\n",
     "        analyze_graph_communities_parallel(G, graph_name, k_target=K_COMMUNITIES)\n",
@@ -525,12 +647,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f487a0c68efa35de",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.237385238Z",
-     "start_time": "2025-11-01T19:42:03.857484Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -538,12 +655,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38d37463d5604c98",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.238715556Z",
-     "start_time": "2025-11-01T19:42:03.900949Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -551,12 +663,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7cbe658b61ddc7c6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.239876070Z",
-     "start_time": "2025-11-01T19:42:03.944569Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -564,12 +671,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9416ea14b4c94c47",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.240492256Z",
-     "start_time": "2025-11-01T19:42:03.988386Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -577,12 +679,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "763543d2dbbbc0a8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.241107089Z",
-     "start_time": "2025-11-01T19:42:04.030834Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -590,12 +687,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62a5be605001dee8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.241605049Z",
-     "start_time": "2025-11-01T19:42:04.074580Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -603,12 +695,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c80ef7762f081fe5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.242517169Z",
-     "start_time": "2025-11-01T19:42:04.118682Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -616,19 +703,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b5c78c46817033",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-01T20:04:27.243152702Z",
-     "start_time": "2025-11-01T19:42:04.161499Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Lista01-ED-Grafos",
    "language": "python",
    "name": "python3"
   },
